tests/ui/trailing_dot.stderr
error: unexpected token
 --> tests/ui/trailing_dot.rs:4:22
  |
4 | type X = Cursor!(a.b.: i32);
  |                      ^
